name:                dhall-test-server
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10
license:             BSD3
license-file:        LICENSE
author:              Sergei Winitzki
maintainer:          winitzki@gmail.com
category:            Web, Networking
build-depends:       base >= 4.7 && < 5
                   , servant >= 0.20 && < 0.21
                   , servant-server >= 0.20 && < 0.21
                   , wai >= 3.2 && < 3.3
                   , aeson >= 2.2 && < 2.3
executable dhall-test-server
  main-is:             TestServer.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                   , servant >= 0.20 && < 0.21
                   , servant-server >= 0.20 && < 0.21
                   , wai >= 3.2 && < 3.3
                   , aeson >= 2.2 && < 2.3
                   , bytestring
                   , case-insensitive
                   , http-types
                   , random
                   , text
                   , warp
  default-language:    Haskell2010

