name:                dhall-test-server
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10
license:             BSD3
license-file:        LICENSE
author:              Sergei Winitzki
maintainer:          winitzki@gmail.com
category:            Web, Networking
build-depends:       base >= 4.7 && < 5
                   , twain
                   , warp
executable dhall-test-server
  main-is:             TestServer.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                   , text
                   , twain
                   , warp
  default-language:    Haskell2010

